<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meeting_room"
    android:baselineAligned="false"
    android:orientation="horizontal">
    <!--<include layout="@layout/custom_progressbar" />-->

    <RelativeLayout
        android:id="@+id/container2_lin"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.2"
        android:alpha="0.85"
        android:background="@color/background">

        <TextView
            android:id="@+id/tv_MeetingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_100sdp"
            android:text="@string/meeting_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_MeetingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_MeetingName"
            android:layout_centerHorizontal="true"
            android:text="datetime range"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/startmeeting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_MeetingDate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/meeting_btn"
            android:drawableStart="@drawable/ic_pause_circle_outline_black_24dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/endmeeting"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextVie99592w
            android:id="@+id/tv_MeetingHeld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startmeeting_btn"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/meeting_held"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/book_btn"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/meeting_btn"
                android:drawableStart="@drawable/ic_reserve_black_24dp"
                android:paddingEnd="@dimen/_2sdp"
                android:paddingStart="@dimen/_2sdp"
                android:text="@string/book"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/meetingslist_btn"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/meeting_btn"
                android:drawableStart="@drawable/ic_meetings_list_black_24dp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                android:text="@string/meeting_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <!---->


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/sharewinds" />

        <TextView
            android:id="@+id/tv_UnitName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/room_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_NowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_UnitName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/meeting_datetime"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_NowDate"
            android:layout_centerHorizontal="true"
            android:text="@string/meeting_datetime"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_nextMeeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_title"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_nextMeetingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/meeting_datetime"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>
    <include layout="@layout/custom_progressbar" />

</LinearLayout>
