<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.techsignage.techsignmeetings.MeetingAttendees">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".13"
        android:id="@+id/container1_lin"
        android:padding="5dp"
        android:background="@drawable/borderframe"
        >

        <TextView
            android:text="@string/todays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_UnitName"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="start"

            />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_UnitName"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:id="@+id/tv_NowDate"
            android:gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container2_lin"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".77">

        <TextView
            android:id="@+id/tv_Attendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dWhite"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/signin"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"/>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_Attendees"

            >

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fillViewport="true"
                android:isScrollContainer="false"
                app:layout_widthPercent="80%"
                >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text=""
                        android:layout_margin="10dp" android:padding="10dp"
                        android:id="@+id/txt_holder1"
                        android:visibility="gone"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".5"
                        android:orientation="horizontal"
                        >


                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="0dp"
                            android:layout_weight=".3"
                            android:textSize="15sp"
                            android:layout_height="match_parent"
                            android:text="User Name"
                            android:padding="5dp"
                            android:textColor="@android:color/black"/>

                        <EditText
                            android:id="@+id/userName_txt"
                            android:layout_width="0dp"
                            android:layout_weight=".7"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text=""
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/borderaround"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".5"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        >


                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="0dp"
                            android:layout_weight=".3"
                            android:textSize="15sp"
                            android:layout_height="match_parent"
                            android:text="Password"
                            android:padding="5dp"
                            android:textColor="@android:color/black"/>

                        <EditText
                            android:id="@+id/password_txt"
                            android:layout_width="0dp"
                            android:layout_weight=".7"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:text=""
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/borderaround"/>

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text=""
                        android:layout_margin="20dp" android:padding="20dp"
                        android:id="@+id/txt_holder2"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text=""
                        android:layout_margin="20dp" android:padding="20dp"
                        android:id="@+id/txt_holder3"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text=""
                        android:layout_margin="20dp" android:padding="20dp"
                        android:id="@+id/txt_holder4"
                        android:visibility="gone"/>

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" android:text=""-->
                        <!--android:layout_margin="20dp" android:padding="20dp"/>-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" android:text=""-->
                        <!--android:layout_margin="20dp" android:padding="20dp"/>-->
                </LinearLayout>

            </ScrollView>

        </android.support.percent.PercentRelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".1"
        android:padding="5dp"
        android:id="@+id/container3_lin"
        android:background="@drawable/borderframe"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0sp"
                android:layout_weight=".65"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:text="@string/back"
                    android:textStyle="bold"/>
            </RelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="0sp"
                android:layout_weight=".35"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <Button
                        android:id="@+id/next_btn"
                        android:layout_width="0sp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="@string/next"
                        android:visibility="invisible"/>

                    <Button
                        android:id="@+id/next_btn1"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:text="@string/next"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.percent.PercentRelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
    <include layout="@layout/custom_progressbar" />
</RelativeLayout>